--- a/css/style.css
+++ b/css/style.css
@@ -77,10 +77,10 @@ button:hover, button:focus, button:active {
   border: none;
 }
 .btn-1 {
-  border-top-left-radius: 2em;
+  border-top-left-radius: 1rem;
   border-top-right-radius: 0px;
-  border-bottom-right-radius: 2em;
-  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
   background: #FFCC00;
   color: #000;
 }
@@ -258,6 +258,18 @@ h6 {
   font-weight: 900;
 }
 
+.white {
+  color: #fff;
+}
+
+.black {
+  color: #000;
+}
+
+.color-2 {
+  color: #FFCC00;
+}
+
 .mb-8 {
   margin-bottom: 8em;
 }
@@ -373,6 +385,12 @@ header nav ul li a {
 header nav ul li a:hover, header nav ul li a:focus {
   color: #008EC1;
 }
+header .btn-1 {
+  border-top-left-radius: 2em;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 2em;
+  border-bottom-left-radius: 2em;
+}
 
 main {
   min-height: calc(100vh - var(--header-h) - var(--footer-h));
@@ -457,7 +475,7 @@ main {
   width: calc(50% + 165px);
   padding: 4rem 10% 4rem 230px;
   position: relative;
-  z-index: 1;
+  z-index: 5;
   margin-left: -165px;
 }
 @media (max-width: 1199px) {
@@ -483,7 +501,7 @@ main {
     width: calc(50% + 50px);
   }
 }
-.sec-1 .main img {
+.sec-1 .main img.main-img {
   position: absolute;
   bottom: 0px;
   z-index: 10;
@@ -491,15 +509,32 @@ main {
   height: 98%;
 }
 @media (max-width: 991px) {
-  .sec-1 .main img {
+  .sec-1 .main img.main-img {
     height: 85%;
   }
 }
 @media (max-width: 767px) {
-  .sec-1 .main img {
+  .sec-1 .main img.main-img {
     height: 100%;
     right: -33%;
   }
+}
+.sec-1 .main img.inner-img {
+  position: absolute;
+  top: 0px;
+  left: 0%;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.sec-1 .main img.icon {
+  position: absolute;
+  top: 25%;
+  right: 10%;
+  z-index: 2;
+  width: 28%;
 }
 .sec-1 .benefits {
   position: absolute;
@@ -819,6 +854,264 @@ main {
     border-bottom-left-radius: 1.5em;
     padding: 1.5em 1em;
   }
+}
+
+.sec-6 .box {
+  border-top-left-radius: 60px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  background-color: #FFCC00;
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  grid-template-rows: 3em 3rem 3em 2em;
+}
+.sec-6 .box h3 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.sec-6 .box img {
+  grid-column: 2/3;
+  grid-row: 1/5;
+}
+.sec-6 .box p {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  font-weight: 600;
+  font-size: 1.25em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  line-height: 1.5rem;
+}
+.sec-6 .box strong {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  font-size: 1.5em;
+  display: flex;
+  align-items: center;
+}
+.sec-6 .box a {
+  grid-column: 1/2;
+  grid-row: 4/5;
+  color: #008EC1;
+  font-weight: 600;
+  font-size: 1.3em;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.sec-7 {
+  background-color: #F6F6F6;
+  padding: 5em 0;
+}
+.sec-7 figure {
+  border-top-left-radius: 60px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  overflow: hidden;
+  position: relative;
+}
+.sec-7 figure img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(0.6);
+}
+.sec-7 figure figcaption {
+  position: relative;
+  z-index: 10;
+  padding: 4em;
+  color: #fff;
+}
+
+.sec-8 {
+  border-top-left-radius: 60px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  background-color: #008EC1;
+  color: #fff;
+  padding: 5em;
+}
+.sec-8 ul {
+  padding-left: 0px;
+  list-style: none;
+}
+.sec-8 ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 1em 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.sec-8 ul li div {
+  font-size: 1.75em;
+  font-weight: 600;
+  flex: 1;
+}
+.sec-8 ul li div::before {
+  content: "";
+  display: inline-block;
+  width: 0.75rem;
+  height: 0.75rem;
+  background-color: #FFCC00;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  margin-right: 1rem;
+}
+.sec-8 ul li strong {
+  font-size: 1.75em;
+  margin-left: 1em;
+}
+.sec-8 ul li .btn-1 {
+  font-weight: 700;
+  font-size: 1.25em;
+  margin-left: 2em;
+  padding: 0.7em 1em;
+}
+
+.sec-9 h2 {
+  margin-bottom: 2em;
+}
+.sec-9 .box {
+  background-color: #FFCC00;
+  height: 100%;
+  width: 100%;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  position: relative;
+}
+.sec-9 .box img {
+  position: absolute;
+  bottom: 0px;
+  left: -2%;
+  height: 145%;
+  z-index: 1;
+}
+
+.marked-list {
+  list-style: none;
+  padding-left: 0px;
+}
+.marked-list li {
+  position: relative;
+  padding-left: 2.5em;
+}
+.marked-list li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  background-color: #FFCC00;
+}
+.marked-list li:not(:first-child) {
+  margin-top: 1em;
+}
+
+.sec-10 {
+  position: relative;
+  overflow-x: clip;
+  padding: 3em 0;
+}
+.sec-10 .pattern {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  height: 100%;
+  z-index: 1;
+  transform: translateX(16.6666666667%);
+}
+.sec-10 .man {
+  position: absolute;
+  top: -13%;
+  left: 55%;
+  height: 100%;
+  z-index: 2;
+}
+.sec-10 .container {
+  position: relative;
+  z-index: 3;
+}
+.sec-10 .box {
+  border-top-left-radius: 2em;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 2em;
+  border-bottom-left-radius: 2em;
+  padding: 2em;
+  background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.06);
+  margin-bottom: 2em;
+}
+
+.sec-11 {
+  position: relative;
+  padding: 4em 0;
+  background-color: #F6F6F6;
+  min-height: 650px;
+}
+.sec-11 .pattern {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  height: 100%;
+  z-index: 1;
+  transform: rotate(180deg);
+}
+.sec-11 .container {
+  position: relative;
+  z-index: 3;
+}
+.sec-11 .container form {
+  background-color: #008EC1;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  padding: 4em;
+  color: #fff;
+  position: relative;
+}
+.sec-11 .container form .img-item {
+  position: absolute;
+  top: 2em;
+  right: 5%;
+  width: 25%;
+  height: 500px;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+
+.accordion-button {
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  padding: 1em 0px;
+}
+.accordion-button::after {
+  background: url(../imgs/icons/plus.svg) no-repeat center;
+  background-size: contain;
 }
 
 footer {
